# Muungano

./: README.md
circuits/: Cargo.toml
circuits/src/: lib.rs  main.rs
circuits/src/mandazi/: mod.rs  native.rs  phase1.rs  poseidon_config.rs
paper/: main.aux  main.out  main.tex
server/: index.html  index.js  package.json  temp_input_379e0b50-d106-45d9-b390-31f673c0a598.json  temp_input_3fe45963-78ce-4953-98ce-bdceb3d3288d.json  temp_input_73cb02c0-ec8c-4653-8a64-66d1fe9403df.json  temp_input_81d8409a-8972-47bc-a49f-d52cebaa6fa7.json  temp_input_958fd0b0-e8c6-4e6b-871f-6f7f7c9bf936.json  temp_input_aad3ed27-d714-4dac-90e6-03178330c3ad.json  temp_input_c44bbafe-2799-4f52-b9ea-d975972becca.json  temp_input_c6affa7b-4cbd-4b11-937a-14906eebef6c.json  test_demo.js
