[package]
name = "circuits"
version = "0.1.0"
edition = "2024"

[dependencies]
halo2-base = { version = "0.5.0", features = ["halo2-axiom", "test-utils"] }
halo2-ecc = { version = "0.5.0" }
rand = "0.8"
rand_core = "0.6"
num-bigint = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand_chacha = "0.3"
